--- a/src/common.css
+++ b/src/common.css
@@ -17,7 +17,9 @@ body {
 
 
 .breed-select {
+    max-width: 50%;
     padding: 10px;
+    overflow: auto;
 }
 
 .loader,
@@ -53,3 +55,6 @@ body {
     line-height: 1.5;
     max-width: 400px;
 }
+
+
+
